--- a/public/assignment/messages.html
+++ b/public/assignment/messages.html
@@ -1,5 +1,20 @@
-<p ng-message="required">This field is required</p>
-<p ng-message="minlength">This field is too short</p>
-<p ng-message="maxlength">This field is too long</p>
-<p ng-message="required">This field is required</p>
-<p ng-message="email">This needs to be a valid email</p>
+<!--<p ng-message="required">This field is required</p>-->
+<!--<p ng-message="minlength"></p>-->
+<!--<p ng-message="maxlength"></p>-->
+<!--<p ng-message="required">This field is required</p>-->
+<!--<p ng-message="email">This needs to be a valid email</p>-->
+<style>
+    .messages {
+        font-size: smaller;
+        padding-top: 5px;
+        padding-bottom: 10px;
+        color: red;
+    }
+</style>
+<div class="messages">
+    <div ng-message="required">This field is required</div>
+    <div ng-message="minlength">This field is too short</div>
+    <div ng-message="maxlength">This field is too long</div>
+    <div ng-message="email">Invalid email address</div>
+    <div ng-message="compareTo">Must match the previous entry</div>
+</div>
