--- a/public/assignment/register/register.view.html
+++ b/public/assignment/register/register.view.html
@@ -6,31 +6,41 @@
             <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
                 <input name="name" type="text" class="form-control" id="inputEmail3" ng-model="user.username" ng-minlength="3"
-                       ng-maxlength="8" placeholder="Username" required>
+                       ng-maxlength="10" placeholder="Username" required>
                 <div class="help-block" ng-messages="userForm.name.$error" ng-if="userForm.name.$touched">
-                    <p ng-message="minlength">Your name is too short.</p>
-                    <p ng-message="maxlength">Your name is too long.</p>
-                    <p ng-message="required">Your name is required.</p>
+                    <div ng-messages-include="messages.html"></div>
                 </div>
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" ng-model="user.password" placeholder="Password">
+                <input type="password" name="password" class="form-control" id="inputPassword3" ng-model="user.password"
+                       placeholder="Password" required>
+                <!--<div class="help-block" ng-show="userForm.password.$error.required">-->
+                    <!--<span>Required</span>-->
+                <!--</div>-->
+                <div class="help-block" ng-messages="userForm.password.$error" ng-if="userForm.password.$touched">
+                    <div ng-messages-include="messages.html"></div>
+                </div>
+
             </div>
         </div>
         <div class="form-group">
             <label for="inputPassword3" class="col-sm-2 control-label">Verify Password</label>
             <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3" ng-model="verifyPassword" placeholder="Verify Password">
+                <input type="password" name="confirmPassword" class="form-control" id="inputPassword3"
+                       ng-model="user.confirmPassword" placeholder="Verify Password" required compare-to="user.password">
+            </div>
+            <div class="help-block" ng-messages="userForm.confirmPassword.$error" ng-if="userForm.confirmPassword.$touched">
+                <div ng-messages-include="messages.html"></div>
             </div>
         </div>
         <div class="form-group">
             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
             <div class="col-sm-10">
                 <input name="email" type="email" class="form-control" id="inputEmail3" ng-model="user.email" placeholder="Email"
-                       ng-minlength="5" ng-maxlength="20" required>
+                       ng-minlength="5" ng-maxlength="25" required>
                 <div class="help-block" ng-messages="userForm.email.$error" ng-if="userForm.email.$touched">
                     <div ng-messages-include="messages.html"></div>
                 </div>
@@ -47,5 +57,5 @@
             </div>
         </div>
     </form>
-    <pre>userForm.name.$error = {{ userForm.name.$error | json }}</pre>
+    <!--<pre>userForm.name.$error = {{ userForm.name.$error | json }}</pre>-->
 </div>
