--- a/public/index.html
+++ b/public/index.html
@@ -121,20 +121,36 @@
 						</div>
 						<div class="card-action">
 							<div class="chip">
-								<a target="_blank" href="project/client/index.html">Link to Assignment 3</a>
+								<a target="_blank" href="project/client/index.html">Link to POC</a>
 							</div>
 							<div class="chip">
 								<a target="_blank" href="https://github.com/suns1191/cs5610fall2015/tree/v0.4">GitHub Link</a>
 							</div>
 						</div>
 					</div>
-				</div>
+
+                    <div class="col s12 m6">
+                        <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                                <span class="card-title">Programming The Server</span>
+                                <br/>
+                            </div>
+                            <div class="card-action">
+                                <div class="chip">
+                                    <a target="_blank" href="assignment/client/index.html">Link to Assignment 3</a>
+                                </div>
+                                <div class="chip">
+                                    <a target="_blank" href="https://github.com/suns1191/cs5610fall2015/tree/v0.4">GitHub Link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 	      </div>
 	    </div>
   	</div>
 
 
-    
+
 
 
   	<footer class="page-footer grey darken-1">
