--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -1,85 +1,60 @@
+
 <!DOCTYPE html>
 <html lang="en" ng-app="FormBuilderApp">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>Welcome !</title>
 
-    <title>Programming The Server</title>
+  <!--<link rel="icon" href="../../favicon.ico">-->
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- Loading Custom CSS files here -->
+  <!-- <link rel="stylesheet" href="/assignment/sidebar/sidebar.css"> -->
+  <link href="css/styles.css" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <!-- Angular from CDN-->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.js"></script>
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  <!-- Loading Custom JS files -->
+  <script src="app.js"></script>
+  <script src="config.js"></script>
+  <script src="views/header/header.controller.js"></script>
+  <script src="views/sidebar/sidebar.controller.js"></script>
+  <script src="views/login/login.controller.js"></script>
+  <script src="views/register/register.controller.js"></script>
+  <script src="views/profile/profile.controller.js"></script>
+  <script src="views/form/form.controller.js"></script>
+  <script src="views/field/field.controller.js"></script>
+  <script src="services/UserService.js"></script>
+  <script src="services/FormService.js"></script>
+  <script src="services/FieldService.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-route.js"></script>
-
-    <!-- load ngmessages -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
-
-    <script src="app.js"></script>
-
-    <script src="config.js"></script>
-
-    <script src="views/header/header.controller.js"></script>
-
-    <script src="views/sidebar/sidebar.controller.js"></script>
-    <!--<script src="userController.js"></script>-->
-
-    <script src="views/login/login.controller.js"></script>
-
-    <script src="views/register/register.controller.js"></script>
-
-    <script src="views/profile/profile.controller.js"></script>
-
-    <script src="views/form/form.controller.js"></script>
-    <!--<script src="views/field/field.controller.js"></script>-->
-
-    <script src="service/UserService.js"></script>
-
-    <script src="service/FormService.js"></script>
-    <!--<script src="service/FieldService.js"></script>-->
-    <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]>
-    <script src="../../assets/js/ie8-responsive-file-warning.js"></script>
-    <![endif]-->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
-<body>
-
-<div ng-include="'views/header/header.view.html'"></div>
-
-<div class="container-fluid">
-    <div ng-include="'views/sidebar/sidebar.view.html'"></div>
+<body class="form-body">
+  <header ng-include="'/assignment/client/views/header/header.view.html'"></header>
+  <div class="container-fluid">
     <div class="row">
-        <div ng-view>
-
-        </div>
+      <div class="col-sm-2">
+        <section ng-include="'/assignment/client/views/sidebar/sidebar.view.html'"></section>
+      </div>
+      <div class="col-sm-10">
+        <!-- <section ng-include="'/assignment/home/home.view.html'"></section> -->
+        <div ng-view></div>
+      </div>
     </div>
-</div>
-
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </div>
+  <!-- Bootstrap core JavaScript -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!-- <script src="http://maps.googleapis.com/maps/api/js"></script> -->
 </body>
 </html>
